--- a/templates/index.html
+++ b/templates/index.html
@@ -14,15 +14,15 @@
     <div class="login_body">
         <div class="login-box">
             <h2>Diário de Bordo</h2>
-            <h2></h2>
+            <h2>{{ ra }}</h2>
             <form>
                 <div class="input_box">
-                    <input required type="text" placeholder="RA do aluno">
+                    <input required type="text" placeholder="Informe Somente Números do RA do aluno" maxlength="8" oninput="this.value = this.value.replace(/[^0-9]/g, '');">
                 </div>
 
-                <div class="input_box">
+               <!-- <div class="input_box">
                     <input required type="password" placeholder="Senha">
-                </div>
+                </div> -->
 
                 <div>
                     <button class="submit">Entrar</button>
