--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="{{url_for('static', filename = 'stylecadastro.css')}}">
 </head>
 <body>
-    <form action="/novoaluno" method="post"> 
+    <form action="/novoaluno" method="POST"> 
+        <label>RA:</label>
+        <input required type="text" placeholder="Informe Somente Números do RA do aluno" maxlength="8" oninput="this.value = this.value.replace(/[^0-9]/g, '');" id="ra" name="ra">
         <label>Nome: </label> 
         <input type="text" required placeholder="Nome" id="nome" name="nome"/> 
-        <label>RA:</label> 
-        <input required type="text" placeholder="Informe Somente Números do RA do aluno" maxlength="8" oninput="this.value = this.value.replace(/[^0-9]/g, '');" id="ra" name="ra">
         <label>Tempo Estudo:</label> 
         <input type="number" placeholder="Tempo de estudo mensal" id="tempoestudo" name="tempoestudo"/> 
         <label>Renda familiar</label>
